--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "yadukul-dairy-backend",
-  "version": "1.0.0",
-  "description": "Backend server for Yadukul Dairy Management System",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
-    "seed": "ts-node src/seed.ts",
-    "postinstall": "npm run build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "@types/bcryptjs": "^2.4.6",  // <--- MOVED HERE
+    "@types/cors": "^2.8.17",      // <--- MOVED HERE
+    "@types/express": "^4.17.21",  // <--- MOVED HERE
+    "@types/jsonwebtoken": "^9.0.5",// <--- MOVED HERE
+    "@types/node": "^20.10.4"       // <--- MOVED HERE
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.24",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.23",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
