--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,12 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "outDir": "dist",
     "rootDir": "src",
-    "strict": true,
+    "outDir": "dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": false,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
